# orcav

./: .gitignore  LICENSE  ORCAV.spec  README.md  THIRD-PARTY-LICENSES.md  build.bat  orcav.bat  orcav.command  pyproject.toml  run.py  run_mac.command  run_win.bat
.github/workflows/: build.yml
orcav/: app.py
orcav/core/: base.py  freq.py  irc.py  neb.py  opt.py  result.py  scan.py  sp.py  structure.py  utils.py
orcav/gui/: data_panel.py  main_window.py  plot_widget.py  tree_model.py  viewer3d.py
